--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="adminlteFiles/css/AdminLTE.css">
-    <link rel="stylesheet" href="adminlteFiles/css/skin-blue.css">
+    <link rel="stylesheet" href="js/libs/admin-lte/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="js/libs/admin-lte/dist/css/skins/skin-blue.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
